<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="delete">Delete Distance</string>
    <string name="app_name">AndroidFinalProjectVillamil</string>
    <string name="distances">Your Distances</string>
    <string name="drivers">Driver Distances</string>
    <string name="threeW">3 Wood Distances</string>
    <string name="fifeW">5 Wood Distanes</string>
    <string name="hibrids">Hibrid Distances</string>
    <string name="fifeI">5 Iron Distances</string>
    <string name="sixI">6 Iron Distances</string>
    <string name="sevenI">7 Iron Distances</string>
    <string name="eightI">8 Iron Distances</string>
    <string name="nineI">9 Iron Distances</string>
	<string name="enter_score">Start Entering your Score!</string>
    <string name="start">Start Measuring</string>
    <string name="stop">Stop Measuring</string>
    <string name="submit">Submit Distance</string>
    <string name="zero">0 meters</string>
    <string name="title_activity_distances">Distances</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
